--- a/app/index.html
+++ b/app/index.html
@@ -7,12 +7,24 @@
     .header{
       margin-top: 15px;
       position: fixed;
+      width: 100%;
+    }
+
+    .footer{
+      color: #88949b;
+      font-size: 15px;
+      line-height: 24px;
+    }
+    .footer .top{
+      background: #353a3d;
+      padding-bottom: 84px;
+      padding-top: 28px;
     }
   </style>
 </head>
 <body layout="column">
-  <div class="header" ng-controller="headerController" layout="column" layout-fill>
-    <md-toolbar>
+  <header class="header" ng-controller="headerController" layout="row" layout-align="center">
+    <md-toolbar layout="column" flex="80" layout-fill>
       <div class="md-toolbar-tools">
         <md-button class="md-icon-button" aria-label="Settings">
           <md-icon md-svg-icon="img/icons/menu.svg"></md-icon>
@@ -29,7 +41,7 @@
         </md-button>
       </div>
     </md-toolbar>
-  </div>
+  </header>
   <div class="content" ng-controller="YourController">
     <div>
       <img src="/app/public/images/nljj3gxvnaxqqpxbj0na.jpg" style="width:100%;">
@@ -41,9 +53,39 @@
       Hello!
     </md-content>
   </div>
-  <div class="footer">
+  <footer class="footer" layout="column">
+    <div class="top" layout="row" layout-align="center start">
+      <div flex="25" layout-fill>
+        <h3>About Us</h3>
+        <span>Lorem ipsum dolor sit amet, consectetur some dymm adipiscing elit. Nam turpis quam, sodales in text she ante sagittis, varius efficitur mauris.</span>
+        <hr/>
+        <span>3015 Grand Ave, Coconut Grove, Merrick Way, FL 12345</span><br/>
+        <span>info@wheels-control.com</span><br/>
+        <span>123-456-7890</span>
+      </div>
+      <div flex="25" layout-fill>
+        <h3>About Us</h3>
+        <span>Lorem ipsum dolor sit amet, consectetur some dymm adipiscing elit. Nam turpis quam, sodales in text she ante sagittis, varius efficitur mauris.</span>
+        <hr/>
+        <span>3015 Grand Ave, Coconut Grove, Merrick Way, FL 12345</span><br/>
+        <span>info@wheels-control.com</span><br/>
+        <span>123-456-7890</span>
+      </div>
+      <div flex="25" layout-fill>
+        <h3>Contact Us</h3>
+        <span>Lorem ipsum dolor sit amet, consectetur some dymm adipiscing elit. Nam turpis quam, sodales in text she ante sagittis, varius efficitur mauris.</span>
+        <hr/>
+        <span>3015 Grand Ave, Coconut Grove, Merrick Way, FL 12345</span><br/>
+        <span>info@wheels-control.com</span><br/>
+        <span>123-456-7890</span>
+      </div>
+    </div>
+    <div>
+    </div>
+    <div>
+    </div>
     
-  </div>
+  </footer>
 
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/angular-aria/angular-aria.js"></script>
