--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,10 @@
   <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css">
   <style type="text/css">
     .header{
-      margin-top: 15px;
-      position: fixed;
+      margin-top: 33px;
+      position: absolute;
       width: 100%;
+      z-index: 9;
     }
 
     .footer{
@@ -26,19 +27,24 @@
   <header class="header" ng-controller="headerController" layout="row" layout-align="center">
     <md-toolbar layout="column" flex="80" layout-fill>
       <div class="md-toolbar-tools">
-        <md-button class="md-icon-button" aria-label="Settings">
-          <md-icon md-svg-icon="img/icons/menu.svg"></md-icon>
-        </md-button>
         <h2>
-          <span>Toolbar with Icon Buttons</span>
+          <span>Japan Cooking</span>
         </h2>
         <span flex></span>
-        <md-button class="md-icon-button" aria-label="Favorite">
-          <md-icon md-svg-icon="img/icons/favorite.svg" style="color: greenyellow;"></md-icon>
-        </md-button>
-        <md-button class="md-icon-button" aria-label="More">
-          <md-icon md-svg-icon="img/icons/more_vert.svg"></md-icon>
-        </md-button>
+        <div layout="row" layout-align="end center">
+          <md-button>
+            Dishes
+          </md-button>
+          <md-button>
+            Location
+          </md-button>
+          <md-button>
+            Contact
+          </md-button>
+          <md-button>
+            About
+          </md-button>
+        </div>
       </div>
     </md-toolbar>
   </header>
@@ -55,29 +61,50 @@
   </div>
   <footer class="footer" layout="column">
     <div class="top" layout="row" layout-align="center start">
-      <div flex="25" layout-fill>
+      <div flex="25" layout-margin>
         <h3>About Us</h3>
         <span>Lorem ipsum dolor sit amet, consectetur some dymm adipiscing elit. Nam turpis quam, sodales in text she ante sagittis, varius efficitur mauris.</span>
         <hr/>
         <span>3015 Grand Ave, Coconut Grove, Merrick Way, FL 12345</span><br/>
         <span>info@wheels-control.com</span><br/>
-        <span>123-456-7890</span>
+        <span>123-456-7890</span><br/>
+        <span>F</span> <span>T</span> <span>IG</span> <span>PIN</span>
+
       </div>
-      <div flex="25" layout-fill>
-        <h3>About Us</h3>
-        <span>Lorem ipsum dolor sit amet, consectetur some dymm adipiscing elit. Nam turpis quam, sodales in text she ante sagittis, varius efficitur mauris.</span>
-        <hr/>
-        <span>3015 Grand Ave, Coconut Grove, Merrick Way, FL 12345</span><br/>
-        <span>info@wheels-control.com</span><br/>
-        <span>123-456-7890</span>
+      <div flex="25" layout-margin>
+        <h3>Featured Classes</h3>
+        <div>
+          <h4>Tempura</h4>
+          <p>Raw vegetables or seafood are dunked in a simple batter and then briefly fried in a mild-flavored oil, just long enough for the batter to crisp and the food to cook through.</p>
+        </div>
+        <div>
+          <h4>Maki</h4>
+          <p>Makizushi is made by wrapping up fillings in rice and nori seaweed using some local , tasty ingredients</p>
+        </div>
+        <h4>Nikujaga</h4>
+        <h4>Chicken / Fish Teriyaki</h4>
       </div>
-      <div flex="25" layout-fill>
+      <div flex="25" layout-padding>
         <h3>Contact Us</h3>
-        <span>Lorem ipsum dolor sit amet, consectetur some dymm adipiscing elit. Nam turpis quam, sodales in text she ante sagittis, varius efficitur mauris.</span>
-        <hr/>
-        <span>3015 Grand Ave, Coconut Grove, Merrick Way, FL 12345</span><br/>
-        <span>info@wheels-control.com</span><br/>
-        <span>123-456-7890</span>
+        <md-content layout="row" layout-sm="column">
+          <form layout="column" flex>
+            <md-input-container class="md-block">
+              <label>Name</label>
+              <input ng-model="user.name" type="text" required>
+            </md-input-container>
+            <md-input-container class="md-block">
+              <label>Email</label>
+              <input ng-model="user.email" type="email" required>
+            </md-input-container>
+            <md-input-container class="md-block">
+              <label>Message</label>
+              <textarea ng-model="user.message" columns="1" md-maxlength="150" rows="2" required></textarea>
+            </md-input-container>
+            <md-button class="md-raised md-primary" flex>
+              Send message
+            </md-button>
+          </form>
+        </md-content>
       </div>
     </div>
     <div>
