--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
     <md-toolbar layout="column" flex="80" layout-fill>
       <div class="md-toolbar-tools">
         <h2>
-          <span>Japan Cooking</span>
+          <span>Experience Japan</span>
         </h2>
         <span flex></span>
         <div layout="row" layout-align="end center">
