--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
           <span>Experience Japan</span>
         </h2>
         <span flex></span>
-        <div layout="row" layout-align="end center">
+        <div layout="row" layout-sm="column" layout-align="end center">
           <md-button ng-href="#classes">
             Dishes
           </md-button>
@@ -224,6 +224,9 @@
             </md-card-actions>
           </md-card>
         </div>
+        <div layout="row" layout-align="center center">
+          <md-button class="md-raised md-primary"><h3>See all classes</h3></md-button>
+        </div>
       </md-white-frame>
     </div>
     <div id="location" flex layout="column" layout-align="start center">
@@ -236,8 +239,8 @@
     </div>
   </div>
   <footer class="footer" layout="column">
-    <div class="top" layout="row" layout-align="center start">
-      <div flex="25" layout-margin>
+    <div class="top" layout="row" layout-sm="column" layout-align="center start">
+      <div flex="25" flex-sm="100" layout-margin>
         <h3>About Us</h3>
         <span>Lorem ipsum dolor sit amet, consectetur some dymm adipiscing elit. Nam turpis quam, sodales in text she ante sagittis, varius efficitur mauris.</span>
         <hr/>
@@ -246,7 +249,7 @@
         <span>123-456-7890</span><br/>
         <span>F</span> <span>T</span> <span>IG</span> <span>PIN</span>
       </div>
-      <div flex="25" layout-margin>
+      <div flex="25" flex-sm="100" layout-margin>
         <h3>Featured Classes</h3>
         <div>
           <h4>Tempura</h4>
@@ -259,10 +262,10 @@
         <h4>Nikujaga</h4>
         <h4>Chicken / Fish Teriyaki</h4>
       </div>
-      <div flex="25" layout-padding>
+      <div flex="25" flex-sm="100" layout-margin>
         <h3>Contact Us</h3>
-        <md-content layout="row" layout-sm="column">
-          <form layout="column" flex>
+        <md-content style="width:100%">
+          <form layout="column">
             <md-input-container md-no-float class="md-block">
               <input ng-model="user.name" type="text" placeholder="Name" required>
             </md-input-container>
