added the google map

--- a/app/index.html
+++ b/app/index.html
@@ -231,7 +231,7 @@
     </div>
     <div id="location" flex layout="column" layout-align="start center">
       <h2>Location</h2>
-      <!--iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="642" height="443" src="https://maps.google.com/maps?hl=en&q=tokyo&ie=UTF8&t=roadmap&z=6&iwloc=B&output=embed"></iframe-->
+      <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="642" height="443" src="https://maps.google.com/maps?hl=en&q=tokyo&ie=UTF8&t=roadmap&z=6&iwloc=B&output=embed"></iframe>
     </div>
     <div id="contact">
     </div>
