add max height to md-card images

--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,10 @@
     md-card-title{
       padding: 10px;
     }
+
+    #classes md-card img{
+      max-height: 300px;
+    }
   </style>
 </head>
 <body layout="column">
