--- a/app/index.html
+++ b/app/index.html
@@ -93,15 +93,14 @@
             <md-card-actions layout="row" layout-align="start center">
               <md-card-icon-actions>
                 <md-button class="md-icon-button" aria-label="Favorite">
-                  <md-icon md-svg-icon="/bower_components/material-design-icons/img/icons/favorite.svg"></md-icon>
+                  <ng-md-icon icon="favorite" style="fill: red" size="24"></ng-md-icon>
                 </md-button>
                 <md-button class="md-icon-button" aria-label="Share">
-                  <md-icon md-svg-icon="img/icons/share-arrow.svg"></md-icon>
+                  <ng-md-icon icon="share" size="24"></ng-md-icon>
                 </md-button>
               </md-card-icon-actions>
               <span flex></span>
-              <md-button>Action 1</md-button>
-              <md-button>Action 2</md-button>
+              <md-button>See details</md-button>
             </md-card-actions>
           </md-card>
           <md-card flex="30" flex-sm="100">
@@ -119,15 +118,14 @@
             <md-card-actions layout="row" layout-align="start center">
               <md-card-icon-actions>
                 <md-button class="md-icon-button" aria-label="Favorite">
-                  <md-icon md-svg-icon="img/icons/favorite.svg"></md-icon>
+                  <ng-md-icon icon="favorite" style="fill: red" size="24"></ng-md-icon>
                 </md-button>
                 <md-button class="md-icon-button" aria-label="Share">
-                  <md-icon md-svg-icon="img/icons/share-arrow.svg"></md-icon>
+                  <ng-md-icon icon="share" size="24"></ng-md-icon>
                 </md-button>
               </md-card-icon-actions>
               <span flex></span>
-              <md-button>Action 1</md-button>
-              <md-button>Action 2</md-button>
+              <md-button>See details</md-button>
             </md-card-actions>
           </md-card>
           <md-card flex="30" flex-sm="100">
@@ -145,15 +143,14 @@
             <md-card-actions layout="row" layout-align="start center">
               <md-card-icon-actions>
                 <md-button class="md-icon-button" aria-label="Favorite">
-                  <md-icon md-svg-icon="img/icons/favorite.svg"></md-icon>
+                  <ng-md-icon icon="favorite" style="fill: red" size="24"></ng-md-icon>
                 </md-button>
                 <md-button class="md-icon-button" aria-label="Share">
-                  <md-icon md-svg-icon="img/icons/share-arrow.svg"></md-icon>
+                  <ng-md-icon icon="share" size="24"></ng-md-icon>
                 </md-button>
               </md-card-icon-actions>
               <span flex></span>
-              <md-button>Action 1</md-button>
-              <md-button>Action 2</md-button>
+              <md-button>See details</md-button>
             </md-card-actions>
           </md-card>
           <md-card flex="30" flex-sm="100">
@@ -171,15 +168,14 @@
             <md-card-actions layout="row" layout-align="start center">
               <md-card-icon-actions>
                 <md-button class="md-icon-button" aria-label="Favorite">
-                  <md-icon md-svg-icon="img/icons/favorite.svg"></md-icon>
+                  <ng-md-icon icon="favorite" style="fill: red" size="24"></ng-md-icon>
                 </md-button>
                 <md-button class="md-icon-button" aria-label="Share">
-                  <md-icon md-svg-icon="img/icons/share-arrow.svg"></md-icon>
+                  <ng-md-icon icon="share" size="24"></ng-md-icon>
                 </md-button>
               </md-card-icon-actions>
               <span flex></span>
-              <md-button>Action 1</md-button>
-              <md-button>Action 2</md-button>
+              <md-button>See details</md-button>
             </md-card-actions> 
           </md-card>
           <md-card flex="30" flex-sm="100">
@@ -197,15 +193,14 @@
             <md-card-actions layout="row" layout-align="start center">
               <md-card-icon-actions>
                 <md-button class="md-icon-button" aria-label="Favorite">
-                  <md-icon md-svg-icon="img/icons/favorite.svg"></md-icon>
+                  <ng-md-icon icon="favorite" style="fill: red" size="24"></ng-md-icon>
                 </md-button>
                 <md-button class="md-icon-button" aria-label="Share">
-                  <md-icon md-svg-icon="img/icons/share-arrow.svg"></md-icon>
+                  <ng-md-icon icon="share" size="24"></ng-md-icon>
                 </md-button>
               </md-card-icon-actions>
               <span flex></span>
-              <md-button>Action 1</md-button>
-              <md-button>Action 2</md-button>
+              <md-button>See details</md-button>
             </md-card-actions>
           </md-card>
           <md-card flex="30" flex-sm="100">
@@ -223,15 +218,14 @@
             <md-card-actions layout="row" layout-align="start center">
               <md-card-icon-actions>
                 <md-button class="md-icon-button" aria-label="Favorite">
-                  <md-icon md-svg-icon="img/icons/favorite.svg"></md-icon>
+                  <ng-md-icon icon="favorite" style="fill: red" size="24"></ng-md-icon>
                 </md-button>
                 <md-button class="md-icon-button" aria-label="Share">
-                  <md-icon md-svg-icon="img/icons/share-arrow.svg"></md-icon>
+                  <ng-md-icon icon="share" size="24"></ng-md-icon>
                 </md-button>
               </md-card-icon-actions>
               <span flex></span>
-              <md-button>Action 1</md-button>
-              <md-button>Action 2</md-button>
+              <md-button>See details</md-button>
             </md-card-actions>
           </md-card>
         </div>
@@ -303,12 +297,13 @@
   <script src="/bower_components/angular-aria/angular-aria.min.js"></script>
   <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
   <script src="/bower_components/angular-material/angular-material.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.6.0/angular-material-icons.min.js"></script> 
   <script src="/bower_components/angular-scroll/angular-scroll.min.js"></script>
   <script>
 
     // Include app dependency on ngMaterial
 
-    angular.module( 'YourApp', [ 'ngMaterial', 'duScroll' ] )
+    angular.module( 'YourApp', [ 'ngMaterial', 'ngMdIcons', 'duScroll' ] )
       .controller("YourController", function ($scope, $document) {
         // body...
       } )
